p2/confs/app1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx:stable
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app1-volume
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "100m"
            memory: "100Mi"
      volumes:
      - name: app1-volume
        hostPath:
          path: /vagrant/app1
